--- a/index.html
+++ b/index.html
@@ -68,10 +68,14 @@
             </div>
           </div>
           <div class="logoImgRack">
+            <img src="images/html.png" alt="HTML code language icon" />
+            <img src="images/css.png" alt="CSS code language icon" />
+            <img src="images/js.png" alt="Javascript code language icon" />
             <img
-              src="/images/Group10_logoBigHor.png"
-              alt="rack of logos showing HTML, CSS, JS and Figma logos"
+              src="images/wp.png"
+              alt="wordpress content management system icon"
             />
+            <img src="images/github.png" alt="Github icon" />
           </div>
         </div>
       </section>
