updated skills & tools

--- a/index.html
+++ b/index.html
@@ -67,15 +67,19 @@
               <button id="IndexContact" class="cta">Contact</button>
             </div>
           </div>
-          <div class="logoImgRack">
-            <img src="images/html.png" alt="HTML code language icon" />
-            <img src="images/css.png" alt="CSS code language icon" />
-            <img src="images/js.png" alt="Javascript code language icon" />
-            <img
-              src="images/wp.png"
-              alt="wordpress content management system icon"
-            />
-            <img src="images/github.png" alt="Github icon" />
+          <div class="skillBox">
+            <h2>skills & tools</h2>
+            <div class="logoImgRack">
+              <img src="images/html.png" alt="HTML code language icon" />
+              <img src="images/css.png" alt="CSS code language icon" />
+              <img src="images/js.png" alt="Javascript code language icon" />
+              <img src="images/vsc.png" alt="Visual studio code icon" />
+              <img
+                src="images/wp.png"
+                alt="wordpress content management system icon"
+              />
+              <img src="images/github.png" alt="Github icon" />
+            </div>
           </div>
         </div>
       </section>
