--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
             found myself wanting to pursue a dream of doing something I found
             very interesting and fun. Like I said before, I have always been a
             gamer and very much interested in tech I wanted to go the IT way and
-            started researching what branch I thought would suit me best. The
-            choice landed on Front-End Development because it speaks to my
+            started researching what branch I thought would suit me best.<br /><br />
+            The choice landed on Front-End Development because it speaks to my
             natural qualities. I very much enjoy creating, troubleshooting and
             just making things work. I am one of those kids who picked apart my
             night stand radio just to see what it looked like inside. I am
@@ -306,6 +306,16 @@
               If you want to reach out to me for any reason. Please use the
               contact form and I will get back to you as soon as possible.
             </p>
+            <br />
+            <p>Or check out my socials:</p>
+            <br />
+            <ul class="socialsList">
+              <li>
+                <a href="https://www.linkedin.com/in/hma1982/">LinkedIn</a>
+              </li>
+              <li><a href="https://twitter.com/HansMarAnd">Twitter</a></li>
+              <li><a href="https://github.com/HMAsp">Github</a></li>
+            </ul>
             <br />
             <p>I am very much looking forward to hearing from you.</p>
           </div>
