--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="projectLinks">
               <a
                 target="_blank"
-                href="https://github.com/HMAsp/HTML-CSS_CA_HMA_2022"
+                href="https://github.com/spookyrumble/HTML-CSS_CA_HMA_2022"
                 >view Github repo</a
               >
               <br />
@@ -132,7 +132,7 @@
             <div class="projectLinks">
               <a
                 target="_blank"
-                href="https://github.com/HMAsp/2022-12-16_semester_project1_HMAsp"
+                href="https://github.com/spookyrumble/2022-12-16_semester_project1_spookyrumble"
                 >view Github repo</a
               >
               <br />
@@ -163,7 +163,9 @@
               alt="picture showing beer recipe index page"
             />
             <div class="projectLinks">
-              <a target="_blank" href="https://github.com/HMAsp/hma_js1_ca"
+              <a
+                target="_blank"
+                href="https://github.com/spookyrumble/hma_js1_ca"
                 >view Github repo</a
               >
               <br />
@@ -314,7 +316,7 @@
                 <a href="https://www.linkedin.com/in/hma1982/">LinkedIn</a>
               </li>
               <li><a href="https://twitter.com/HansMarAnd">Twitter</a></li>
-              <li><a href="https://github.com/HMAsp">Github</a></li>
+              <li><a href="https://github.com/spookyrumble">Github</a></li>
             </ul>
             <br />
             <p>I am very much looking forward to hearing from you.</p>
