--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <p>
               Hello there! I'm Hans. <br />I embarked on an exciting journey of
               learning and creativity at the age of 40. With this website I
-              intend to give you a little insight to who I am and show you some
-              of the work I have done over my first year as a front-end
+              intend to give you a little insight into who I am and show you
+              some of the work I have done over my first year as a front-end
               development student.
             </p>
             <div class="ctaRack">
@@ -109,15 +109,15 @@
           </div>
           <div>
             <p>
-              The cross course assignment is my first ever design and
+              The cross-course assignment is my first-ever design and
               introduction to HTML and CSS. This project opened my eyes to many
               things regarding WCAG and SEO that I had never learned about until
               we started this learning trip. It started as a pure design
-              assignment. After that we had to develop our designs using vanilla
-              HTML and CSS and in the second semester when we started learning
-              Javascript, this site was rewritten to fetch its products via an
-              API. For the API we used wordpress and we set this up ourselves to
-              become an ecommerce build.
+              assignment. After that, we had to develop our designs using
+              vanilla HTML and CSS and in the second semester when we started
+              learning Javascript, this site was rewritten to fetch its products
+              via an API. For the API we used WordPress and we set this up
+              ourselves to become an e-commerce build.
             </p>
           </div>
         </div>
@@ -145,7 +145,7 @@
             <p>
               This would be my semester project. This project put together all
               the things we learned throughout our first semester. It is more
-              word and text oriented so it was a challenge as the first one we
+              word and text-oriented so it was a challenge as the first one we
               made was mostly images and therefore easier to work with in a way.
               The design is mine and even though I am a very dark theme biased
               person I want to make this a bit more bright and vibrant because
@@ -176,8 +176,8 @@
           </div>
           <div>
             <p>
-              The second semester started with a bang and we were thrown in to
-              the world of Javascript. This assignment shows my first time ever
+              The second semester started with a bang and we were thrown into
+              the world of Javascript. This assignment shows my first time
               working with JS. The task was to create a simple site and showcase
               that we could handle API data. Product list and a dynamically
               generated detail page.
@@ -209,18 +209,18 @@
           <div>
             <p>
               To conclude our first year journey we had the project exam. This
-              travelblog binds it all together and showcases my acquired skills
-              in design, development and programming. This project had us create
-              a blog. We could use whatever content we wanted to create but it
-              had some criteria we had to accommodate and some challenges we had
-              to overcome on our own like for example the comment section and
-              the contact form post. We have had nothing about POST during this
-              year so this was a challenge I am proud to say I solved. I also
-              had a personal side goal to make this site fully scalable without
-              a single line of media queries and I achieved that. My design on
-              this project is fully scalable down to 320px and however big we
-              want to go. I am working on a ultra wide monitor so that is what I
-              used for testing.
+              travel blog binds it all together and showcases my acquired skills
+              in design, development, and programming. This project had us
+              create a blog. We could use whatever content we wanted to create
+              but it had some criteria we had to accommodate and some challenges
+              we had to overcome on our own like for example the comment section
+              and the contact form post. We have had nothing about POST during
+              this year so this was a challenge I am proud to say I solved. I
+              also had a personal side goal to make this site fully scalable
+              without a single line of media queries and I achieved that. My
+              design on this project is fully scalable down to 320px and however
+              big we want to go. I am working on an ultra wide monitor so that
+              is what I used for testing.
             </p>
           </div>
         </div>
@@ -247,28 +247,28 @@
               Hi Again! Like I started out saying, my name is Hans or in some
               circles more commonly known as Spookyrumble. I have been a gamer
               most of my life so as you probably guessed, Spookyrumble is my
-              gamer name going back to the release of the XBox 360 when I
-              started playing FPS games and I needed a tag. I occationally
+              gamer name going back to the release of the Xbox 360 when I
+              started playing FPS games and I needed a tag. I occasionally
               stream on Twitch under the same name and I am a part of many
               communities all over the world.
             </p>
             <br />
             <p class="selfiePara">
-              Personally I am a very calm and collected person. I work on a very
-              logical level (to me) and I guess you can call me an observer and
-              thinker more than a talker/speaker. I prefer to not take up to
+              Personally, I am a very calm and collected person. I work on a
+              very logical level (to me) and I guess you can call me an observer
+              and thinker more than a talker/speaker. I prefer to not take up to
               much space in a room but I will voice up if I feel the need and
               that is usually if I think someone could need help in some way.
             </p>
             <br />
             <p class="selfiePara">
-              Most of my days are spent on my daughters. August 2023 they are
-              all in school as my 5 year old starts 1st grade, which is nice.
+              Most of my days are spent with my daughters. August 2023 they are
+              all in school as my 5-year-old starts 1st grade, which is nice.
               Taking this time right now to do these studies have been pure gold
-              and I am in a very happy place. Biggest dream is to find some
-              awesome collagues after I graduate so I can keep learning. I am
+              and I am in a very happy place. My biggest dream is to find some
+              awesome colleagues after I graduate so I can keep learning. I am
               enjoying development a lot as it speaks to my need to know how
-              things work but also the arts and crafts it holds. There are
+              things work and also the arts and crafts it holds. There are
               barely any limits to what we can do!
             </p>
           </div>
@@ -285,12 +285,12 @@
             The choice landed on Front-End Development because it speaks to my
             natural qualities. I very much enjoy creating, troubleshooting and
             just making things work. I am one of those kids who picked apart my
-            night stand radio just to see what it looked like inside. I am
-            absolutely loving learning about development and working on these
+            nightstand radio just to see what it looked like inside. I
+            absolutely love learning about development and working on these
             projects figuring out how to do what I want to do is so much fun and
             I feel like this is the perfect match for me. I am only sorry I did
             not start this sooner but while this waited I have had a long good
-            life this far. Full of experience and my three wonderful daughters
+            life thus far. Full of experience and my three wonderful daughters
             and my wife. May the rest of it be filled with awesome projects and
             creative people to work with!
           </p>
