--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -102,8 +102,10 @@
                 >view Github repo</a
               >
               <br />
-              <a target="_blank" href="https://chic-lollipop-939ca8.netlify.app"
-                >visit website on netlify</a
+              <a
+                target="_blank"
+                href="https://github.com/spookyrumble/HTML-CSS_CA_HMA_2022"
+                >visit website on netlify - Discontinued</a
               >
             </div>
           </div>
@@ -201,8 +203,8 @@
               <br />
               <a
                 target="_blank"
-                href="https://friendly-moonbeam-149a6a.netlify.app"
-                >visit website on netlify</a
+                href="https://github.com/Spookyrumble/project-exam-1"
+                >visit website on netlify - Discontinued</a
               >
             </div>
           </div>
@@ -304,12 +306,7 @@
       <div class="footerMainCont">
         <div class="formContainer">
           <div class="contactTextCont">
-            <p>
-              If you want to reach out to me for any reason. Please use the
-              contact form and I will get back to you as soon as possible.
-            </p>
-            <br />
-            <p>Or check out my socials:</p>
+            <p>If you want to reach out to me please use any of my socials</p>
             <br />
             <ul class="socialsList">
               <li>
@@ -321,56 +318,7 @@
             <br />
             <p>I am very much looking forward to hearing from you.</p>
           </div>
-          <div class="contactFormCont">
-            <dialog class="thankYouForm">
-              <div>
-                <h2 id="dialogHeader">Your message has been sent!</h2>
-                <p id="dialogText">
-                  <span class="dialogPara"> Thank you! </span>
-                  <br />
-                  I will get back to you as soon as possible!
-                </p>
-              </div>
-            </dialog>
-            <form id="form" class="form" action="submit">
-              <label for="name">Your name</label>
-              <input
-                name="your-name"
-                id="name"
-                type="text"
-                placeholder="Full Name"
-                required
-              />
-              <label for="email">Your email</label>
-              <input
-                id="email"
-                type="text"
-                name="your-email"
-                placeholder="Valid Email address"
-                required
-              />
-              <label for="subj">A subject</label>
-              <input
-                id="subj"
-                type="text"
-                name="your-subject"
-                placeholder="Please write a subject"
-                required
-              />
-              <label for="message">Your message</label>
-              <textarea
-                id="message"
-                name="your-message"
-                cols="30"
-                rows="10"
-                placeholder="Please write your message"
-                required
-              ></textarea>
-              <div class="buttonWrapper">
-                <button type="submit" id="formBtn" class="formCta">Send</button>
-              </div>
-            </form>
-          </div>
+          <div class="contactFormCont"></div>
         </div>
       </div>
       <div class="topNav">
