Debugging. Form disconnecet. Removed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button id="spookyScrollTop" class="cta">home</button>
             <button id="portF" class="cta">portfolio</button>
             <button id="about" class="cta">About me</button>
-            <button id="contact" class="cta">Contact</button>
+            <button id="connect" class="cta">connect</button>
           </div>
         </dialog>
       </nav>
@@ -64,7 +64,7 @@
             <div class="ctaRack">
               <button id="indexPortF" class="cta">portfolio</button>
               <button id="IndexAbout" class="cta">About me</button>
-              <button id="IndexContact" class="cta">Contact</button>
+              <button id="Indexconnect" class="cta">connect</button>
             </div>
           </div>
           <div class="skillBox">
@@ -216,7 +216,7 @@
               create a blog. We could use whatever content we wanted to create
               but it had some criteria we had to accommodate and some challenges
               we had to overcome on our own like for example the comment section
-              and the contact form post. We have had nothing about POST during
+              and the connect form post. We have had nothing about POST during
               this year so this was a challenge I am proud to say I solved. I
               also had a personal side goal to make this site fully scalable
               without a single line of media queries and I achieved that. My
@@ -299,13 +299,13 @@
         </div>
       </section>
     </main>
-    <footer class="contact">
+    <footer class="connect">
       <div class="sectionHeader">
-        <h2>Contact</h2>
+        <h2>connect</h2>
       </div>
       <div class="footerMainCont">
         <div class="formContainer">
-          <div class="contactTextCont">
+          <div class="connectTextCont">
             <p>If you want to reach out to me please use any of my socials</p>
             <br />
             <ul class="socialsList">
@@ -318,7 +318,7 @@
             <br />
             <p>I am very much looking forward to hearing from you.</p>
           </div>
-          <div class="contactFormCont"></div>
+          <div class="connectFormCont"></div>
         </div>
       </div>
       <div class="topNav">
